# wilton_nginx

./: CMakeLists.txt
gateway/: config  ngx_http_wilton_gateway_module.c  ngx_http_wilton_module.c
module/: ngx_http_wilton_module.c  response_pipe.c
resources/: wilton_nginx.def
response/: config  ngx_http_wilton_response_module.c
src/: wilton_nginx.cpp
test/: config.json  test.js
test/client/: loadWorker.js  test.js  testLoad.js
test/server/: gateway.js
test/server/conf/: config.json
